# fastut

./: .pre-commit-config.yaml  pyproject.toml  readme.txt
backend/: main.py  sql_app.db
backend/apis/: base.py
backend/apis/general_pages/: route_homepage.py
backend/apis/v1/: route_general_pages.py  route_jobs.py  route_login.py  route_users.py
backend/core/: config.py  hashing.py  security.py
backend/db/: session.py
backend/db/models/: jobs.py  users.py
backend/db/repository/: jobs.py  users.py
backend/schemas/: jobs.py  users.py
backend/templates/components/: navbar.html
backend/tests/: conftest.py
backend/tests/test_routes/: test_jobs.py  test_users.py
backend/tests/utils/: users.py
