[tool.poetry]
name = "fastut"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
python-dotenv = "^0.19.2"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
